SQlite caching and GraphQL

--- a/views/vip-customers.html
+++ b/views/vip-customers.html
@@ -549,7 +549,7 @@
         body: JSON.stringify({
           minSpent: 1000,
           tag: '2026VIP',
-          onlyAwaitingShipment: false // Set to true if you only want to tag unshipped orders
+          onlyAwaitingShipment: true // Set to true if you only want to tag unshipped orders
         })
       });
       
