--- a/views/vip-customers.html
+++ b/views/vip-customers.html
@@ -147,6 +147,7 @@
       <a class="nav-link" href="/">Product Manager</a>
       <a class="nav-link" href="/shipstation">ShipStation Customs</a>
       <a class="nav-link active" href="/vip-customers">VIP Customers</a>
+      <a class="nav-link" href="/order-formatter">Order Formatter</a>
       <div style="margin-top:auto"></div>
       <a class="nav-link" href="/logout">Logout</a>
     </aside>
