--- a/views/shipstation-editor.html
+++ b/views/shipstation-editor.html
@@ -40,6 +40,7 @@
       <a class="nav-link active" href="/">Product Manager</a>
       <a class="nav-link" href="/shipstation">ShipStation Customs Editor</a>
       <a class="nav-link" href="/vip-customers">VIP Customers</a>
+      <a class="nav-link" href="/order-formatter">Order Formatter</a>
       <div style="margin-top:auto"></div>
       <a class="nav-link" href="/logout">Logout</a>
     </aside>
